tests/errors/function_arg_type_mismatch.dang
# Test function argument type mismatch
add_nums(x: Int!, y: Int!): Int! { x + y }

let result = add_nums(x: "not a number", y: 5)
